@@ -1,9 +1,9 @@
-# $Id: Makefile,v 1.11 2005/08/03 20:56:34 dancy Exp $
+# $Id: Makefile,v 1.11.4.1 2005/10/20 20:59:24 layer Exp $
 
 ### IMPORTANT: the nightly builds the product need to use a local copy and
 ###	       and not one in /c/Program Files/...  only change the ../aclxxx
 ###	       when the build machine's copy is updated.
-LISPDIR := $(shell if test -f ../../acl70/allegro; then echo ../../acl70; else echo '"/c/Program Files/acl70"'; fi)
+LISPDIR := $(shell if test -f ../../acl80b/allegro; then echo ../../acl80b; else echo '"/c/Program Files/acl80b"'; fi)
 ALLEGRO=$(LISPDIR)/allegro
 
 build: configure/configure.exe
