@@ -1,3 +1,10 @@
+*******************************************************************************
+******** 4.3 release ***********
+
+2005-10-20    <layer@HOBART>
+
+	* nfs.nsi: fail on win9x
+
 2005-10-19    <dancy@CANDY2K>
 v4.3
 	
